# flow-complex

./: CMakeLists.txt  README.md  affine_hull.hpp  ascend_task.hpp  clean.hpp  common.hpp  compute.hpp  critical_point.hpp  descend_task.hpp  dynamic_qr.hpp  file_io.hpp  flow_complex.hpp  flow_point.hpp  logger.hpp  makros.h  nn_along_ray.hpp  point_cloud.hpp  quadmath.hpp  tbb.hpp  tbb_ll.hpp  update_ray.hpp  utility.hpp  vertex_filter.hpp
CMakeModules/: FindCatch.cmake  FindGMPxx.cmake  FindGooglePerfTools.cmake
benchmarks/: compute_tbb_hl.hpp  compute_tbb_ll.hpp
deprecated/: compute.hpp  fc_single.cpp
examples/: CMakeLists.txt  fc_single.cpp  fc_tbb_hl.cpp  fc_tbb_ll.cpp  simple.cpp
nanoflann/: nanoflann.hpp
tests/: CMakeLists.txt  affine_hull.cpp  dynamic_qr.cpp  nn_along_ray.cpp  point_cloud.cpp
tools/: CMakeLists.txt  fc.cpp  fc2pc.cpp  inc_pts.cpp  perturb.cpp  simplify.cpp
